CHANGES BETWEEN 2.13.2 and 2.13.3 (2024-Mmm-DD)

  I. IMPORTANT BUG FIXES

  - Rare double-free crashes in the cache subsystem have been fixed.

  - Excessive stack allocation in the autohinter has been fixed.


  II. MISCELLANEOUS

  - The B/W rasterizer  has  received a major upkeep  that resulted in
    large performance improvement.  The rendering speed  has increased
    and even doubled for very complex glyphs.

  - If the new configuration option `TT_CONFIG_OPTION_GPOS_KERNING` is
    defined,  `FT_Get_Kerning`  understands rudimentary  GPOS  kerning
    (for TrueType fonts  only).  This is not enabled  by default since
    its usage  is very  limited, mainly  for legacy  applications that
    have to support TrueType fonts automatically converted from 'kern'
    tables to GPOS kerning.  If you need proper (GPOS) kerning support
    please use a higher-level library like HarfBuzz.

    Code contributed by David Saltzman <davidbsaltzman@gmail.com>.

  - The internal structures  `PS_DesignMap` and `PS_Blend` related  to
    parsing of old Multiple Masters fonts  have been removed  from the
    public header file `t1tables.h`.


======================================================================

CHANGES BETWEEN 2.13.1 and 2.13.2 (2023-Aug-25)

  I. MISCELLANEOUS

  - Better support for CFF2 variation fonts.

  - TrueType interpreter  version 38 (also known  as 'Infinality') has
    been removed.

  - Improved OpenVMS support.


======================================================================

CHANGES BETWEEN 2.13.0 and 2.13.1 (2023-Jun-24)

  I. MISCELLANEOUS

  - New function  `FT_Get_Default_Named_Instance` to get the  index of
    the default named instance of an OpenType Variation Font.

  - A new load flag `FT_LOAD_NO_SVG` to make FreeType ignore glyphs in
    an 'SVG ' table.

  - New  function  `FT_GlyphSlot_AdjustWeight`  to  adjust  the  glyph
    weight either  horizontally or  vertically.  This  is part  of the